--- a/App24/app/src/main/res/layout/activity_create_post.xml
+++ b/App24/app/src/main/res/layout/activity_create_post.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 android:orientation="vertical">
     <include
         android:id="@+id/menu_layout"
@@ -11,54 +12,80 @@
         android:id="@+id/layout_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/menu_layout">
+        android:layout_below="@+id/menu_layout"
+        android:background="@color/text_background_deselect">
         <TextView
             android:id="@+id/txt_post_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/text_background_deselect"
-            android:padding="@dimen/text_row_height"
+            android:paddingBottom="@dimen/text_row_height"
+            android:paddingLeft="@dimen/text_row_height"
+            android:paddingRight="@dimen/text_row_height"
+            android:paddingTop="@dimen/text_row_height"
             android:text="@string/create_post"
-            android:textColor="@color/text_color_grey"/>
-    </RelativeLayout>
-
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/layout_post">
+            android:textColor="@color/text_color_grey"
+            android:textSize="@dimen/enter_text"/>
         <EditText
-            android:id="@+id/edit_write_post"
+            android:id="@+id/edit_post_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/txt_post_title"
             android:background="@null"
-            android:gravity="left"
-            android:hint="Whats in your mind"
-            android:isScrollContainer="true"
-            android:lines="5"
-            android:padding="10dp"/>
-        <LinearLayout
-            android:id="@+id/camera_tumb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/edit_write_post"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/image_bitmap"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </LinearLayout>
-
-
-        <ImageButton
-            android:id="@+id/ibtn_select_image_from_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/camera_tumb"
-            android:layout_marginTop="@dimen/main_screen_padding"
-            android:background="@android:color/transparent"
-            android:padding="@dimen/main_screen_padding"
-            android:src="@drawable/camera"/>
+            android:hint="@string/enter_the_title"
+            android:paddingBottom="@dimen/text_row_height"
+            android:paddingRight="@dimen/text_row_height"
+            android:paddingTop="@dimen/text_row_height"
+            android:singleLine="true"
+            android:textColor="@color/text_color_grey"
+            android:textSize="@dimen/enter_text"/>
     </RelativeLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_post">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/camera_tumb_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/linear_background"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:id="@+id/camera_tumb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/layout_post"
+                    android:orientation="horizontal">
 
+                </LinearLayout>
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/camera_tumb_main">
+                <EditText
+                    android:id="@+id/edit_write_post"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:gravity="left"
+                    android:hint="Whats in your mind"
+                    android:isScrollContainer="true"
+                    android:lines="5"
+                    android:padding="10dp"
+                    android:textSize="@dimen/enter_text"/>
+                <ImageButton
+                    android:id="@+id/ibtn_select_image_from_gallery"
+                    android:layout_width="?android:attr/actionBarSize"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:layout_below="@+id/edit_write_post"
+                    android:layout_marginTop="@dimen/main_screen_padding"
+                    android:background="@android:color/transparent"
+                    android:padding="@dimen/text_row_height"
+                    android:src="@drawable/camera"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
