--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -8,146 +8,152 @@
         android:id="@+id/menu_layout"
         layout="@layout/base_main_toolbar"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/menu_layout"
-        android:padding="@dimen/main_screen_padding">
-
+    <ScrollView android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/ad"
+                android:layout_below="@+id/menu_layout">
         <RelativeLayout
-            android:id="@+id/layout_post_detail_heading"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="@string/lorem_ipsum"
-                android:textColor="@color/black"
-                android:textSize="@dimen/feed_heading_text"
-                android:textStyle="bold"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/layout_feed_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_post_detail_heading"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_creator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="@string/creator_name"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_created_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/txt_creator"
-                android:paddingLeft="5dp"
-                android:text="@string/created_time"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_profile_count_login_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_toLeftOf="@+id/fb_likes"
-                android:background="@drawable/round_rect_shape"
-                android:drawableLeft="@drawable/comment"
-                android:drawablePadding="2dp"
-                android:padding="2dp"
-                android:text="28"
-                android:textColor="@color/fb_color"
-                android:textSize="10sp"/>
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/fb_likes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_toLeftOf="@+id/fb_likes_count"
-                android:background="@drawable/round_rect_shape_fb"
-                android:drawableLeft="@drawable/fb"
-                android:drawablePadding="5dp"
-                android:padding="2dp"
-                android:text="+1"
-                android:textColor="@color/white"
-                android:textSize="10sp"/>
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/fb_likes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/round_rect_shape_fb_count"
-                android:drawablePadding="5dp"
-                android:padding="2dp"
-                android:text="412"
-                android:textColor="@color/fb_like_count"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_seen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/layout_feed_body"
-                android:layout_centerInParent="true"
-                android:drawableLeft="@drawable/seen"
-                android:drawablePadding="5dp"
-                android:text="3,027"
-                android:textSize="10dp"/>
-        </RelativeLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/layout_feed_details">
-
-            <LinearLayout
+            android:layout_height="match_parent">
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:padding="@dimen/main_screen_padding">
+
                 <RelativeLayout
-                    android:id="@+id/layout_media_preview"
+                    android:id="@+id/layout_post_detail_heading"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp">
-                    <ImageView
-                        android:id="@+id/img_preview"
+                    android:layout_height="wrap_content">
+
+                    <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
-                        android:background="@drawable/pic_two"
-                        android:gravity="fill"/>
-                    <ImageView
-                        android:id="@+id/img_video_preview"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/video_icons"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <com.capstone.app24.custom.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_height="wrap_content"
+                        android:maxLines="3"
                         android:text="@string/lorem_ipsum"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/feed_body_text"/>
+                        android:textSize="@dimen/feed_heading_text"
+                        android:textStyle="bold"/>
                 </RelativeLayout>
-            </LinearLayout>
-        </ScrollView>
 
-    </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/layout_feed_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/layout_post_detail_heading"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp">
+
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/txt_creator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:text="@string/creator_name"
+                        android:textSize="10sp"/>
+
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/txt_created_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/txt_creator"
+                        android:paddingLeft="5dp"
+                        android:text="@string/created_time"
+                        android:textSize="10sp"/>
+
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/txt_profile_count_login_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:layout_toLeftOf="@+id/fb_likes"
+                        android:background="@drawable/round_rect_shape"
+                        android:drawableLeft="@drawable/comment"
+                        android:drawablePadding="2dp"
+                        android:padding="2dp"
+                        android:text="28"
+                        android:textColor="@color/fb_color"
+                        android:textSize="10sp"/>
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/fb_likes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:layout_toLeftOf="@+id/fb_likes_count"
+                        android:background="@drawable/round_rect_shape_fb"
+                        android:drawableLeft="@drawable/fb"
+                        android:drawablePadding="5dp"
+                        android:padding="2dp"
+                        android:text="+1"
+                        android:textColor="@color/white"
+                        android:textSize="10sp"/>
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/fb_likes_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/round_rect_shape_fb_count"
+                        android:drawablePadding="5dp"
+                        android:padding="2dp"
+                        android:text="412"
+                        android:textColor="@color/fb_like_count"
+                        android:textSize="10sp"/>
+
+                    <com.capstone.app24.custom.CustomTextView
+                        android:id="@+id/txt_seen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/layout_feed_body"
+                        android:layout_centerInParent="true"
+                        android:drawableLeft="@drawable/seen"
+                        android:drawablePadding="5dp"
+                        android:text="3,027"
+                        android:textSize="10dp"/>
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/layout_feed_details"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:id="@+id/layout_media_preview"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp">
+                        <ImageView
+                            android:id="@+id/img_preview"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/pic_two"
+                            android:gravity="fill"/>
+                        <ImageView
+                            android:id="@+id/img_video_preview"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/video_icons"
+                            />
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <com.capstone.app24.custom.CustomTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentTop="true"
+                            android:isScrollContainer="false"
+                            android:text="@string/lorem_ipsum"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/feed_body_text"/>
+                    </RelativeLayout>
+                </LinearLayout>
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+    </ScrollView>
     <include
         android:id="@+id/edit_menu"
         layout="@layout/view_edit_menus"
@@ -156,4 +162,11 @@
         android:layout_below="@+id/menu_layout"
         android:layout_marginTop="-10dp"
         android:visibility="gone"/>
+    <ImageView
+        android:id="@+id/ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/image"/>
 </RelativeLayout>
