--- a/App24/app/src/main/res/layout/activity_post_detail_with_image.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail_with_image.xml
@@ -7,80 +7,82 @@
     <include
         android:id="@+id/menu_layout"
         layout="@layout/base_main_toolbar"/>
-
-    <RelativeLayout
+    <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/menu_layout"
-        android:padding="@dimen/main_screen_padding">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/menu_layout">
 
         <RelativeLayout
-            android:id="@+id/layout_post_detail_heading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.capstone.app24.custom.CustomTextViewBold
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="@string/key_to_success"
-                android:textColor="@color/black"
-                android:textSize="@dimen/feed_heading_text"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/layout_feed_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_post_detail_heading"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_creator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="@string/creator_name"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_created_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/txt_creator"
-                android:paddingLeft="5dp"
-                android:text="@string/created_time"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_profile_count_login_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="@string/profile_count_login_user"
-                android:textSize="10sp"/>
-
-            <com.capstone.app24.custom.CustomTextView
-                android:id="@+id/txt_seen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/layout_feed_body"
-                android:layout_centerInParent="true"
-                android:drawableLeft="@drawable/seen"
-                android:drawablePadding="5dp"
-                android:text="3,027"
-                android:textSize="10dp"/>
-        </RelativeLayout>
-
-        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/layout_feed_details">
+            android:layout_below="@+id/menu_layout"
+            android:padding="@dimen/main_screen_padding">
+
+            <RelativeLayout
+                android:id="@+id/layout_post_detail_heading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:text="@string/key_to_success"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/feed_heading_text"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layout_feed_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_post_detail_heading"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/txt_creator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="@string/creator_name"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/txt_created_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/txt_creator"
+                    android:paddingLeft="5dp"
+                    android:text="@string/created_time"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/txt_profile_count_login_user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="@string/profile_count_login_user"
+                    android:textSize="10sp"/>
+
+                <TextView
+                    android:id="@+id/txt_seen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/layout_feed_body"
+                    android:layout_centerInParent="true"
+                    android:drawableLeft="@drawable/seen"
+                    android:drawablePadding="5dp"
+                    android:text="3,027"
+                    android:textSize="10dp"/>
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_feed_details"
                 android:orientation="vertical">
 
                 <ImageView
@@ -90,14 +92,22 @@
                     android:layout_weight="1"
                     android:src="@drawable/ic_launcher"/>
 
-                <com.capstone.app24.custom.CustomTextView
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.61"
+                    android:isScrollContainer="false"
+                    android:scaleX="0"
+                    android:scaleY="0"
                     android:text="@string/lorem_ipsum"
                     android:textColor="@color/black"
                     android:textSize="@dimen/feed_body_text"/>
             </LinearLayout>
-        </ScrollView>
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/image"/>
 </RelativeLayout>
