--- a/App24/app/src/main/res/layout/fragment_users.xml
+++ b/App24/app/src/main/res/layout/fragment_users.xml
@@ -8,4 +8,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Users"/>
+    <com.capstone.app24.sliding_tabs.SlidingTabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:elevation="2dp"/>
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tabs"
+        android:layout_weight="1"/>
+
+
 </LinearLayout>
