--- a/App24/app/src/main/res/layout/activity_settings.xml
+++ b/App24/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+
     <include
         android:id="@+id/menu_grey"
         layout="@layout/grey_main_toolbar"/>
@@ -68,5 +69,14 @@
         </RelativeLayout>
     </RelativeLayout>
 
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        xmlns:fb="http://schemas.android.com/apk/res-auto"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        />
 
 </RelativeLayout>
