--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -10,7 +11,7 @@
 
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/ad"
+                android:layout_above="@+id/adView"
                 android:layout_below="@+id/menu_layout">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -119,7 +120,7 @@
                     <RelativeLayout
                         android:id="@+id/layout_media_preview"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp">
+                        android:layout_height="275dp">
                         <ImageView
                             android:id="@+id/img_preview"
                             android:layout_width="match_parent"
@@ -162,11 +163,21 @@
         android:layout_below="@+id/menu_layout"
         android:layout_marginTop="-10dp"
         android:visibility="gone"/>
-    <ImageView
-        android:id="@+id/ad"
-        android:layout_width="match_parent"
+    <!-- <ImageView
+         android:id="@+id/ad"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_marginTop="5dp"
+         android:src="@drawable/image"/>-->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:src="@drawable/image"/>
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+
 </RelativeLayout>
