--- a/App24/app/src/main/res/layout/activity_splash.xml
+++ b/App24/app/src/main/res/layout/activity_splash.xml
@@ -33,14 +33,15 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
-        <!--<com.facebook.login.widget.LoginButton
+        <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
             xmlns:fb="http://schemas.android.com/apk/res-auto"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_gravity="center_vertical"
             android:background="@android:color/transparent"
-            android:scaleType="centerInside"/>-->
+            android:scaleType="centerInside"
+            />
 
         <Button
             android:id="@+id/btn_login_with_facebook"
