--- a/App24/app/src/main/res/layout/fragment_latest.xml
+++ b/App24/app/src/main/res/layout/fragment_latest.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
-    <FrameLayout
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentTop="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
+
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+    <!--android:id="@+id/swipeRefreshLayout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_latest_feeds"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!--<android.support.v4.widget.SwipeRefreshLayout-->
-        <!--android:id="@+id/swipeRefreshLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_latest_feeds"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
-    </FrameLayout>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:scaleType="fitXY"
+        />
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+</RelativeLayout>
