--- a/App24/app/src/main/res/layout/user_profile_menu_bar.xml
+++ b/App24/app/src/main/res/layout/user_profile_menu_bar.xml
@@ -14,21 +14,31 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:src="@drawable/search"/>
-    <com.capstone.app24.custom.CustomDrawablEditText
-        android:id="@+id/edit_search"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/cancel"
-        android:background="@android:color/transparent"
-        android:drawableLeft="@drawable/search"
-        android:drawablePadding="5dp"
-        android:gravity="left|center_vertical"
-        android:hint="Search"
-        android:imeOptions="actionSearch"
-        android:paddingLeft="20dp"
-        android:singleLine="true"
-        android:visibility="gone"/>
+    <RelativeLayout android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@+id/cancel"
+                    android:padding="10dp">
+        <com.capstone.app24.custom.CustomDrawablEditText
+            android:id="@+id/edit_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_corners_edit_text"
+            android:drawableLeft="@drawable/search"
+            android:drawablePadding="5dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="left|center_vertical"
+            android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:singleLine="true"
+            android:visibility="gone">
+            <requestFocus/>
+        </com.capstone.app24.custom.CustomDrawablEditText>
+
+    </RelativeLayout>
 
 
     <TextView
@@ -40,6 +50,7 @@
         android:gravity="center"
         android:singleLine="true"
         android:text="@string/user_name"
+        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@color/black"
         android:textStyle="bold"/>
 
