--- a/App24/app/src/main/res/layout/fragment_home.xml
+++ b/App24/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:orientation="vertical">
 
-    <com.capstone.app24.sliding_tabs.SlidingTabLayout
+   <!-- <com.capstone.app24.sliding_tabs.SlidingTabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:elevation="2dp"/>
+        android:elevation="2dp"/>-->
 
 
     <android.support.v4.view.ViewPager
@@ -18,4 +19,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tabs"
         android:layout_weight="1"/>
-</LinearLayout>
+</RelativeLayout>
