--- a/App24/app/src/main/res/layout/user_profile_menu_bar.xml
+++ b/App24/app/src/main/res/layout/user_profile_menu_bar.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
-    android:background="@color/text_background_deselect"
-    android:orientation="vertical">
+    android:layout_alignParentTop="true"
+    android:background="@color/text_background_deselect">
 
     <ImageButton
         android:id="@+id/ibtn_search"
