--- a/App24/app/src/main/res/layout/view_latest_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_latest_feeds_with_image.xml
@@ -4,11 +4,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="@dimen/main_screen_padding">
-
+    <RelativeLayout
+        android:id="@+id/xtra_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="visible">
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/layout_heading"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/xtra_layout">
 
         <TextView
             android:id="@+id/txt_feed_heading"
@@ -93,15 +99,28 @@
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:background="@drawable/pic_two"/>
-            <ImageView
-                android:id="@+id/img_video_preview"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerInParent="true"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:src="@drawable/video_preview_icon"
-                android:visibility="visible"/>
+            <RelativeLayout
+                android:id="@+id/layout_img_video_preview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true">
+                <!--<VideoView-->
+                <!--android:id="@+id/video"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:visibility="gone"/>-->
+                <ImageView
+                    android:id="@+id/img_video_preview"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/video_preview_icon"
+                    android:visibility="visible"/>
+
+
+            </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
 
