--- a/App24/app/src/main/res/layout/view_user_profit_details.xml
+++ b/App24/app/src/main/res/layout/view_user_profit_details.xml
@@ -5,6 +5,12 @@
               android:layout_marginBottom="5dp"
               android:orientation="vertical">
     <RelativeLayout
+        android:id="@+id/xtra_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone">
+    </RelativeLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/text_background_deselect">
