--- a/App24/app/src/main/res/layout/activity_create_post.xml
+++ b/App24/app/src/main/res/layout/activity_create_post.xml
@@ -31,6 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/txt_post_title"
             android:background="@null"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:hint="@string/enter_the_title"
             android:paddingBottom="@dimen/text_row_height"
             android:paddingRight="@dimen/text_row_height"
@@ -40,6 +42,7 @@
             android:textSize="@dimen/enter_text"/>
     </RelativeLayout>
     <ScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/layout_post">
@@ -54,9 +57,10 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:id="@+id/camera_tumb"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layout_post"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                 </LinearLayout>
@@ -70,10 +74,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:gravity="left"
                     android:hint="Whats in your mind"
                     android:isScrollContainer="true"
                     android:lines="5"
+                    android:overScrollMode="ifContentScrolls"
                     android:padding="10dp"
                     android:textSize="@dimen/enter_text"/>
                 <ImageButton
