--- a/App24/app/src/main/res/layout/activity_paypal.xml
+++ b/App24/app/src/main/res/layout/activity_paypal.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:padding="20dp"
+
                 android:src="@drawable/paypal"/>
         </RelativeLayout>
         <RelativeLayout
@@ -49,6 +49,7 @@
                 android:drawableLeft="@drawable/mail"
                 android:drawablePadding="10dp"
                 android:ems="10"
+                android:hint="@string/email_hint_chinese"
                 android:inputType="textEmailAddress"
                 android:padding="10dp"/>
             <TextView
@@ -59,7 +60,8 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Or"/>
+                android:text="或"
+                android:textSize="@dimen/feed_body_text"/>
             <TextView
                 android:id="@+id/paypal_sign_up"
                 android:layout_width="wrap_content"
@@ -68,7 +70,8 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Sign up with Paypal"/>
+                android:text="前往Paypal註冊"
+                android:textSize="@dimen/feed_body_text"/>
         </RelativeLayout>
     </LinearLayout>
 
