--- a/App24/app/src/main/res/layout/view_latest_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_latest_feeds_with_image.xml
@@ -8,7 +8,7 @@
         android:id="@+id/xtra_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:visibility="visible">
+        android:visibility="gone">
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/layout_heading"
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:background="@drawable/pic_two"/>
+                />
             <RelativeLayout
                 android:id="@+id/layout_img_video_preview"
                 android:layout_width="match_parent"
