--- a/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
@@ -99,8 +99,7 @@
                 android:id="@+id/img_preview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:background="@drawable/pic_two"/>
+                android:layout_centerInParent="true"/>
             <RelativeLayout
                 android:id="@+id/layout_img_video_preview"
                 android:layout_width="match_parent"
